--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^20.2.1"
+    "@hapi/hapi": "^20.2.1",
+    "joi": "^17.5.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/hapi__hapi": "^20.0.10",
     "@types/jest": "^27.4.0",
+    "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.7.0",
