--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.20",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
@@ -20,7 +22,9 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
+    "format": "prettier --write .",
     "start": "react-scripts start",
+    "prebuild": "npm run format",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
