--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-emoji-render": "^1.2.4",
     "react-scripts": "5.0.0",
+    "swr": "^1.1.2",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
