proxy GitHub API via backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "",
-  "main": "build/index.js",
+  "main": "build/main.js",
   "scripts": {
     "format": "prettier --write .",
     "prelint": "npm run format",
@@ -12,17 +12,24 @@
     "build": "tsc",
     "pretest": "npm run build",
     "test": "jest",
+    "start": "node build/main.js",
     "build:watch": "tsc --watch",
-    "test:watch": "jest --watch --verbose=false --coverage=false"
+    "test:watch": "jest --watch --verbose=false --coverage=false",
+    "start:watch": "nodemon build/main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/h2o2": "^9.1.0",
     "@hapi/hapi": "^20.2.1",
+    "dotenv-safe": "^8.2.0",
+    "hapi-pino": "^9.1.0",
     "joi": "^17.5.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "pino-pretty": "^7.5.0"
   },
   "devDependencies": {
+    "@types/hapi__h2o2": "^8.3.3",
     "@types/hapi__hapi": "^20.0.10",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
@@ -31,6 +38,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.7",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
   }
