--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,11 @@
   "dependencies": {
     "@hapi/h2o2": "^9.1.0",
     "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
+    "@hapi/vision": "^6.1.0",
     "dotenv-safe": "^8.2.0",
     "hapi-pino": "^9.1.0",
+    "hapi-swagger": "^14.2.4",
     "joi": "^17.5.0",
     "lodash": "^4.17.21",
     "pino-pretty": "^7.5.0"
@@ -31,6 +34,8 @@
   "devDependencies": {
     "@types/hapi__h2o2": "^8.3.3",
     "@types/hapi__hapi": "^20.0.10",
+    "@types/hapi__inert": "^5.2.3",
+    "@types/hapi__vision": "^5.5.3",
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.178",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
