--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "jest": "^27.4.7",
+    "nock": "^13.2.2",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "typescript": "^4.5.4"
