--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.11",
     "eslint-config-prettier": "^8.3.0",
     "luxon": "^2.3.0",
+    "msw": "^0.36.5",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
