--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,57 +1,41 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:4000",
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "react-scripts build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "deploy": "s3cmd --no-mime-magic --acl-public sync --delete-removed ./dist/ s3://github.erwinv.dev/"
+  },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.5",
-    "@mui/material": "^5.2.8",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/luxon": "^2.0.9",
-    "@types/node": "^16.11.20",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "eslint-config-prettier": "^8.3.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "5.0.0-alpha.82",
     "luxon": "^2.3.0",
     "msw": "^0.36.5",
-    "prettier": "^2.5.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-emoji-render": "^1.2.4",
-    "react-scripts": "5.0.0",
-    "swr": "^1.1.2",
-    "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "swr": "^1.1.2"
   },
-  "scripts": {
-    "format": "prettier --write .",
-    "start": "react-scripts start",
-    "prebuild": "npm run format",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/luxon": "^2.4.0",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react-swc": "^3.3.1",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "prettier": "^2.8.8",
+    "typescript": "^4.9.5",
+    "vite": "^4.3.9",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
