--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "react-scripts build",
+    "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "s3cmd --no-mime-magic --acl-public sync --delete-removed ./dist/ s3://github.erwinv.dev/"
+    "deploy": "s3cmd --no-mime-magic --acl-public sync --delete-removed ./dist/ s3://demo.erwinv.dev/"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
@@ -34,7 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "prettier": "^2.8.8",
-    "typescript": "^4.9.5",
+    "typescript": "^5.0.4",
     "vite": "^4.3.9",
     "vite-tsconfig-paths": "^4.2.0"
   }
