--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-emoji-render": "^1.2.4",
+    "react-virtuoso": "^4.3.8",
     "swr": "^1.1.2"
   },
   "devDependencies": {
